# bakery_sales_analysis

./: .gitignore  README.md  config.yaml  pyproject.toml  requirements.txt
dashboards/: .~Veronicas_dashboards__15616.twbr  .~Veronicas_dashboards__17985.twbr  .~Veronicas_dashboards__19639.twbr  .~Veronicas_dashboards__24996.twbr  .~Veronicas_dashboards__26387.twbr  .~Veronicas_dashboards__28173.twbr  Veronicas_dashboards.twb  Veronicas_dashboards.twbx
data/clean/: cleaned_df.csv  merged_climate.csv  merged_sales.csv  veronicas_cleaned_df.csv
data/raw/: daily_climate_2024.csv  veronicas_sales_2023.csv  veronicas_sales_2024.csv
notebooks/: EDA_notebook.ipynb  Veronicas_KPIs.ipynb  climate_data_cleaning.ipynb  final_data_cleaning.ipynb  sales_data_cleaning.ipynb  veronicas_EDA.ipynb  veronicas_hypothesis_tests.ipynb  veronicas_sales_predictor.ipynb
sql/: veronicas_queries.sql  veronicas_schema.sql
