[project]
name = "final-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datetime>=5.5",
    "holidays>=0.62",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "lightgbm>=4.5.0",
    "matplotlib>=3.10.0",
    "numpy>=2.2.0",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.0",
    "seaborn>=0.13.2",
    "xgboost>=2.1.3",
]
